Fix: some bugs and wrote unit tests